# sdb_fpga

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt  JobWrapper.h  JoinApi.h  RawScan.h  ScanApi.cpp  ScanApi.h
src/data/: CMakeLists.txt  Column.h  Partition.h  RawTable.h  Table.h
src/data/comp_test/: CMakeLists.txt  Compressor.cpp  Compressor.h  MicroBench.cpp
src/data/compressor/: CMakeLists.txt  Compressor.cpp  Compressor.h  Generator.cpp
src/exec/: CMakeLists.txt  Master.cpp
src/exec/util/: WorkQueue.h
src/fpga/: CMakeLists.txt  fpga.h
src/fpga/base/: CMakeLists.txt
src/fpga/base/hw/rtl/: base_sources.txt  cci_mpf_app_conf_default.vh
src/fpga/base/sw/: CMakeLists.txt  opae_svc_wrapper.cpp  opae_svc_wrapper.h
src/fpga/operators/: CMakeLists.txt
src/fpga/operators/filter_scan/: CMakeLists.txt
src/fpga/operators/filter_scan/hw/rtl/: cci_mpf_app_conf.vh  filter_scan.json  filter_scan.sv  sources.txt
src/fpga/operators/filter_scan/hw/rtl/16bits/: p128.sv
src/fpga/operators/filter_scan/hw/rtl/4bits/: filter_unit.sv  p1.sv  p128.sv  p16.sv  p2.sv  p32.sv  p4.sv  p64.sv  p8.sv
src/fpga/operators/filter_scan/hw/rtl/8bits/: p128.sv
src/fpga/operators/filter_scan/sw/: CMakeLists.txt  filter_scan.cpp  filter_scan.h
src/fpga/operators/mem_rw/hw/rtl/: mem_rw.json  mem_rw.sv  sources.txt
src/fpga/operators/mem_rw/sw/: CMakeLists.txt  mem_rw.cpp  mem_rw.h
src/fpga/operators/read_block/hw/rtl/: cci_mpf_app_conf.vh  filter_scan.sv  read_block.json  read_block_cci.sv  sources.txt
src/fpga/operators/read_block/sw/: CMakeLists.txt  afu_json_info.h  read_block.cpp  read_block.h
src/fpga/operators/read_pred/: CMakeLists.txt
src/fpga/operators/read_pred/hw/: CMakeLists.txt
src/fpga/operators/read_pred/hw/rtl/: read_pred.json  read_pred.sv  sources.txt
src/fpga/operators/read_pred/sw/: CMakeLists.txt  TestPred.cpp  afu_json_info.h  read_pred.cpp  read_pred.h
src/fpga/operators/semi_join/hw/rtl/: join_p32.sv
src/fpga/operators/ssb/aggregation/: discount_sum.sv  discount_sumv2.sv
src/fpga/operators/ssb/filter_scan/: d_year.sv  lo_discount.sv  lo_quantity.sv
src/fpga/operators/ssb/pipelined/: scan_join_agg.sv
src/fpga/operators/ssb/semi_join/: lineorder_date.sv
src/fpga/processing/: CMakeLists.txt
src/fpga/processing/block_rw/hw/rtl/: block_read.json  block_read.sv  block_rw.sv  block_rw_cpy.sv  sources.txt
src/fpga/processing/data_parallelism/: CMakeLists.txt
src/fpga/processing/data_parallelism/hw/: sources_.txt
src/fpga/processing/data_parallelism/hw/rtl/: base_afu.json  base_afu.sv  mpf_conf.vh  scan_afu.sv  sources.txt
src/fpga/processing/data_parallelism/sw/: CMakeLists.txt  afu_json_info.h  block_rw.cpp  block_rw.h
src/fpga/processing/ssb/hw/rtl/: base_afu.json  base_afu.sv  helper.vh  join_afu.sv  scan_afu.sv  sources.txt
src/fpga/processing/ssb/sw/: CMakeLists.txt  afu_handler.cpp  afu_handler.h  afu_json_info.h
src/network/server/: TCPAcceptor.cpp
src/sched/: ProcessingUnit.cpp  ProcessingUnit.h
src/thread/: CoreHandler.h  FPGAHandler.h  Syncronizer.h  Thread.h  ThreadHandler.h
src/thread/util/: PThreadBarrier.h
src/util/: Query.h  Types.h  dax.h
(+11 files in other folders)
